--- a/UI/totaraphoto/register.html
+++ b/UI/totaraphoto/register.html
@@ -350,7 +350,7 @@
         <div id="content">
             <div class="container">
 
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-offset-3">
                     <div class="box">
                         <h1>New account</h1>
 
@@ -402,7 +402,7 @@
         <div id="copyright">
             <div class="container">
                 <div class="col-md-6">
-                    <p class="pull-left">© 2015 Your name goes here.</p>
+                    <p class="pull-left">© 2016 Totara Photography Association of New Zealand</p>
 
                 </div>
                 <div class="col-md-6">
