--- a/UI/totaraphoto/register.html
+++ b/UI/totaraphoto/register.html
@@ -186,7 +186,7 @@
         <div id="copyright">
             <div class="container">
                 <div class="col-md-6">
-                    <p class="pull-left">© 2016 Totara Photography Association of New Zealand</p>
+                    <p class="pull-left">© 2016 Totara Photographer Association of New Zealand</p>
 
                 </div>
                 <div class="col-md-6">
