remove flipping effect of product, update default css

--- a/UI/totaraphoto/category-full.html
+++ b/UI/totaraphoto/category-full.html
@@ -136,16 +136,7 @@
 
                 <div class="col-md-12">
 
-                    <ul class="breadcrumb">
-                        <li><a href="#">Home</a>
-                        </li>
-                        <li>Ladies</li>
-                    </ul>
-
-                    <div class="box">
-                        <h1>Ladies</h1>
-                        <p>In our Ladies department we offer wide selection of the best products we have found and carefully selected worldwide.</p>
-                    </div>
+                
 
                     <div class="box info-bar">
                         <div class="row">
@@ -153,27 +144,7 @@
                                 Showing <strong>12</strong> of <strong>25</strong> products
                             </div>
 
-                            <div class="col-sm-12 col-md-8  products-number-sort">
-                                <div class="row">
-                                    <form class="form-inline">
-                                        <div class="col-md-6 col-sm-6">
-                                            <div class="products-number">
-                                                <strong>Show</strong>  <a href="#" class="btn btn-default btn-sm btn-primary">12</a>  <a href="#" class="btn btn-default btn-sm">24</a>  <a href="#" class="btn btn-default btn-sm">All</a> products
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6 col-sm-6">
-                                            <div class="products-sort-by">
-                                                <strong>Sort by</strong>
-                                                <select name="sort-by" class="form-control">
-                                                    <option>Price</option>
-                                                    <option>Name</option>
-                                                    <option>Sales first</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
+                         
                         </div>
                     </div>
 
@@ -188,11 +159,11 @@
                                                 <img src="img/product1.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
-                                        <div class="back">
+                                        <!--<div class="back">
                                             <a href="detail.html">
                                                 <img src="img/product1_2.jpg" alt="" class="img-responsive">
                                             </a>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </div>
                                 <a href="detail.html" class="invisible">
@@ -239,24 +210,6 @@
                                     </p>
                                 </div>
                                 <!-- /.text -->
-
-                                <div class="ribbon sale">
-                                    <div class="theribbon">SALE</div>
-                                    <div class="ribbon-background"></div>
-                                </div>
-                                <!-- /.ribbon -->
-
-                                <div class="ribbon new">
-                                    <div class="theribbon">NEW</div>
-                                    <div class="ribbon-background"></div>
-                                </div>
-                                <!-- /.ribbon -->
-
-                                <div class="ribbon gift">
-                                    <div class="theribbon">GIFT</div>
-                                    <div class="ribbon-background"></div>
-                                </div>
-                                <!-- /.ribbon -->
                             </div>
                             <!-- /.product -->
                         </div>
