updated product photos

--- a/UI/totaraphoto/detail.html
+++ b/UI/totaraphoto/detail.html
@@ -142,7 +142,7 @@
                     <div class="row" id="productMain">
                         <div class="col-sm-6">
                             <div id="mainImage">
-                                <img src="img/detailbig1.jpg" alt="" class="img-responsive">
+                                <img src="img/Z-sony-a6000-beauty.jpg" alt="" class="img-responsive">
                             </div>
 
                           
